# PCMakerspace3DPKiosk

./: .gitignore  CMakeLists.txt
headers/: bambuemulator.h  bambulab.h  errorhandler.hpp  errors.hpp  gcodeparser.cpp  gcodeparser.h  ltx2aQT.h  octoprintemulator.h  printermanager.h  prusalink.h  qrcodegen.hpp  qrmanager.h  qrprovider.h  qtbackend.h
src/: QTBackend.cpp  bambuemulator.cpp  bambulab.cpp  errorhandler.cpp  ftpsclient.cpp  gcodeparser.cpp  ltx2aQT.cpp  main.cpp  octoprintemulator.cpp  printer.cpp  printermanager.cpp  prusa.cpp  prusalink.cpp  qrcodegen.cpp  qrmanager.cpp  qrprovider.cpp  qtbackend.cpp
ui/: Main.qml
